<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/room_layout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="70dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enter_room_title"
            android:text="@string/game_room_title"
            android:textSize="28dp"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/room_name_title"
            android:text="@string/room_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/room_name_editable"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:maxLength="20"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/room_password_title"
            android:text="@string/password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/room_password_editable"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="20"
            android:layout_marginBottom="30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/done_button"
                android:text="@string/done"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>



    </LinearLayout>

    <!-- The wooden frame -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wood_frame"
        android:background="@drawable/wood_frame"/>

    <!-- Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_room_ad_view_banner"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/game_room_banner_ad_unit_id" />


</RelativeLayout>