<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choose_tutorial_text"
        android:text="@string/choose_tutorial"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/basic_rules_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_green_shadow"
        android:text="@string/basic_rules"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/choose_tutorial_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/advanced_strategies_button"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_green_shadow"
        android:text="@string/advanced_strategies"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/basic_rules_button"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>


</RelativeLayout>